0.1.6

* task json configuration support

0.1.5 2016-05-28

* hotfix for 0.1.4 version ( dump stdout for spoofed responses )

0.1.4 2016-05-28

* run scenarios in perlipc way, to get stdout from long running scripts appeared as it goes
* added story directories markers to make TAP output even more readable
 

0.1.3 2016-05-06

* strun - `--verbose` mode is ON by default, choose `--silent` option to disable this
* run perl story stories respecting carton environment
* host parameter removed and deprecated

0.1.2 2016-05-05

* Dependencies support for Ruby ( Gemfile )

0.1.1 2016-05-05

* fixing a flickering bug with story cache directory path

0.1.0 2016-05-01

A very important and huge release as the base for all other 0.1.* series releases.
An outthentic becomes a multipurposes scenarios framework.

* new languages support - Ruby and Bash! WoW! 
* BREAKING CHANGES - ini configuration files format - switched to Config::General from Config::Tiny 
* verbose option added to strun to see scenarios output
* debug_bytes - deprecated
* outth_show_story - deprecated
* A LOT of  changes, improvements in documentation

0.0.24 2016-04-21

* requires latest version of Outthentic::DSL
* some examples changed to show new features of Outthentic:DSL ( here documents for multiline expressions )

0.0.23 2016-04-18

* first try on runtime parameters implementation

0.0.22 2016-04-13

* documentation - fixed example for downstream stories

0.0.21 2016-04-13

* yet another documentation improvements

0.0.20 2016-04-13

* many documentation improvements
>>>>>>> 246aae8c5005070bbdd5c481dfe8327b12f26fc0

0.0.19 2016-04-12

* now outthentic consumes yaml configuration files as well

0.0.18 2016-04-03

* made some message only seen when debug mode is on - to make default output more concise

0.0.17 2016-03-23

* default value for match_l increased

0.0.16 2016-03-01

* outth_show_story variable is respected ( to dump story.pl  content )

0.0.15 2016-02-17
